--- a/bootstrap/roles/ocp4-install-gitops/defaults/main.yaml
+++ b/bootstrap/roles/ocp4-install-gitops/defaults/main.yaml
@@ -1,5 +1,5 @@
 pipelines_expected_crds:
-- pipelineresources.tekton.dev
+# - pipelineresources.tekton.dev
 - pipelineruns.tekton.dev
 - pipelines.tekton.dev
 - tektonpipelines.operator.tekton.dev
